# Prevendo-a-Perda-de-Clientes-com-IA

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: guia_projeto.md
sql/: 01_schema.sql  02_feature_engineering.sql  03_queries_analiticas.sql
src/data_generation/: generate.py  import_kaggle.py
src/database/: connection.py  models.py
src/export/: save_predictions.py
src/features/: extract.py
src/model/: train.py
tests/: teste.py
